<resources>

    <string name="main_title">啪啪打卡</string>

    <string name="title_activity_semester">SemesterActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_experiment">ExperimentActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_upload_history">UploadHistoryActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <string name="app_name">PAPA</string>
    <string name="username">用户名(手机号, 邮箱)</string>
    <string name="password">密码</string>
    <string name="cannot_get_telephone_num">获取不了手机号喵 QAQ</string>
    <string name="hint_sign_in_1">登录</string>
    <string name="hint_sign_in_2">您可以使用学号、手机号或者邮箱进行登录</string>
    <string name="hint_select_course">请选择课程</string>
    <string name="portrait">头像</string>
    <string name="comment_area">请在此输入您的评论</string>
    <string name="teacher_assistant">助教课程</string>
    <string name="student">学生课程</string>
    <string name="help">帮助</string>
    <string name="settings">设置</string>
    <string name="favorite">喜欢的实验</string>
    <string name="experiment_history">做过的实验</string>
    <string name="upload_history">我的上传</string>
    <string name="edit_profile">编辑个人信息</string>
    <string name="more">更多</string>
    <string name="notification">通知栏</string>
    <string name="get_telephone_number">获取手机号</string>
    <string name="user_id">学号</string>
    <string name="user_class">班级</string>
    <string name="user_grade">成绩</string>
    <string name="user_comment">评价</string>
    <string name="now_editable">现在可以编辑成绩和评价了</string>
    <string name="select_type">请选择上传的内容</string>
    <string-array name="upload_type">
        <item name="camera">照相</item>
        <item name="video">录像</item>
        <item name="gallery">本地相册</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_experiment_information">实验信息</string>
    <string name="action_upload">上传实验结果</string>
    <string name="action_edit_grades">编辑成绩</string>
    <string name="action_student_information">学生信息</string>
    <string name="action_generate_QR_code">生成二维码</string>

    <string name="title_semester">学期</string>

    <string name="key_sign_in_course">key_sign_in_course</string>
    <!--<string name="key_semester_course">key_semester_course</string>-->
    <string name="key_course_experiment">key_course_experiment</string>
    <string name="key_experiment_student">key_experiment_student</string>
    <string name="key_to_detail">key_to_detail</string>
    <string name="key_to_help">key_to_help</string>
    <string name="key_to_settings">key_to_settings</string>
    <string name="key_to_favorite">key_to_favorite</string>
    <string name="key_to_experiment_history">key_to_experiment_history</string>
    <string name="key_to_upload_history">key_to_upload_history</string>
    <string name="key_to_edit_profile">key_to_edit_profile</string>
    <string name="key_enter_sign_in">key_enter_sign_in</string>
    <string name="key_to_notification">key_to_notification</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string name="color_primary">#3F51B5</string>
    <string name="color_primary_dark">#303F9F</string>
    <string name="title_activity_help_activity">HelpActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_notification">NotificationActivity</string>

</resources>