<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item android:id="@+id/nav_favorite" android:icon="@drawable/ic_favorite_outline_black_24dp"
            android:title="@string/favorite" />
        <item android:id="@+id/nav_experiment_history" android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/experiment_history" />
        <item android:id="@+id/nav_upload_history" android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/upload_history" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="项目4" />
    </group>

    <item android:title="其他">
        <menu>
            <item android:id="@+id/nav_help" android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
            <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>